overlays/leaf-ap4y/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: leaf
spec:
  rules:
  - host: leaf.ap4y.me
    http:
      paths:
      - path: /
        backend:
          serviceName: leaf-ap4y
          servicePort: 8000
